Incorrect Stretching Overlay of type "Area" when any face is hidden. #67299

Closed
opened 2019-07-20 09:14:29 +02:00 by Yury · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

Exact steps for others to reproduce the error

  1. Open attached file;
  2. Enter edit mode;
  3. See incosistent result of UV Stretching Overlay.
    stratch_display_selection_bug.jpg
    stratch_display_selection_bug.blend
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] **Exact steps for others to reproduce the error** 1. Open attached file; 2. Enter edit mode; 3. See incosistent result of UV Stretching Overlay. ![stratch_display_selection_bug.jpg](https://archive.blender.org/developer/F7623647/stratch_display_selection_bug.jpg) [stratch_display_selection_bug.blend](https://archive.blender.org/developer/F7623654/stratch_display_selection_bug.blend)
Author

Added subscriber: @grecay

Added subscriber: @grecay

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't replicate the problem by enabling the Streching overlay and selecting only 3 faces on the default cube.
We need more specific and detailed steps in order to reproduce the problem.

I can't replicate the problem by enabling the Streching overlay and selecting only 3 faces on the default cube. We need more specific and detailed steps in order to reproduce the problem.
Author

Thanks for the answer. I added a blend file and a screenshot of the problem.

Thanks for the answer. I added a blend file and a screenshot of the problem.
Germano Cavalcante self-assigned this 2019-07-23 00:51:20 +02:00
Germano Cavalcante changed title from UV Edit mode in UV editon with turn on Overlays-Strething (type area) is flickering ang wrong display with not whole mesh selected to Stretching Overlay of type "Area" produces incorrect results if any face is hidden. 2019-07-23 01:03:11 +02:00
Germano Cavalcante changed title from Stretching Overlay of type "Area" produces incorrect results if any face is hidden. to Incorrect Stretching Overlay of type "Area" when any face is hidden. 2019-07-23 01:04:55 +02:00
Germano Cavalcante removed their assignment 2019-07-23 01:09:38 +02:00
Clément Foucault was assigned by Germano Cavalcante 2019-07-23 01:09:38 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Here a possible solution:

diff --git a/source/blender/draw/intern/draw_cache_impl_mesh.c b/source/blender/draw/intern/draw_cache_impl_mesh.c
index 306031809d1..2376787a273 100644
--- a/source/blender/draw/intern/draw_cache_impl_mesh.c
+++ b/source/blender/draw/intern/draw_cache_impl_mesh.c
@@ -4830,7 +4830,7 @@ static void uvedit_fill_buffer_data(MeshRenderData *rdata,
     /* Tag hidden faces */
     BM_elem_flag_set(efa, BM_ELEM_TAG, uvedit_face_visible_nolocal_ex(rdata->toolsettings, efa));
 
-    if (vbo_area && BM_elem_flag_test(efa, BM_ELEM_TAG)) {
+    if (vbo_area) {
       edit_uv_preprocess_stretch_area(
           efa, cd_loop_uv_offset, fidx++, &totarea, &totuvarea, faces_areas);
     }

@fclem, that check if the face is visible was not part of the original code (781995a0)

Here a possible solution: ``` diff --git a/source/blender/draw/intern/draw_cache_impl_mesh.c b/source/blender/draw/intern/draw_cache_impl_mesh.c index 306031809d1..2376787a273 100644 --- a/source/blender/draw/intern/draw_cache_impl_mesh.c +++ b/source/blender/draw/intern/draw_cache_impl_mesh.c @@ -4830,7 +4830,7 @@ static void uvedit_fill_buffer_data(MeshRenderData *rdata, /* Tag hidden faces */ BM_elem_flag_set(efa, BM_ELEM_TAG, uvedit_face_visible_nolocal_ex(rdata->toolsettings, efa)); - if (vbo_area && BM_elem_flag_test(efa, BM_ELEM_TAG)) { + if (vbo_area) { edit_uv_preprocess_stretch_area( efa, cd_loop_uv_offset, fidx++, &totarea, &totuvarea, faces_areas); } ``` @fclem, that check if the face is visible was not part of the original code (781995a0)
Clément Foucault removed their assignment 2019-07-23 10:35:02 +02:00
Germano Cavalcante was assigned by Clément Foucault 2019-07-23 10:35:02 +02:00

@mano-wii You are correct. You can commit the fix. Maybe note in the commit log that we want it for 2.80 as it is pretty safe.

@mano-wii You are correct. You can commit the fix. Maybe note in the commit log that we want it for 2.80 as it is pretty safe.

This issue was referenced by 19aa873f70

This issue was referenced by 19aa873f70026e4745584915466e9da6910457b8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67299
No description provided.