Fix T67299: UV Stretching Overlay of type "Area" fail when any face is hidden

We want to include this for 2.80